# QIconKit

./: CMakeLists.txt  README.md
cmake/: QtIconsConfig.cmake.in
examples/: CMakeLists.txt  iconbrowser.cpp  iconbrowser.h  icongrid.cpp  icongrid.h  main.cpp  mainwindow.cpp  qtwidgetsample.cpp  qtwidgetsample.h  twotoneicongrid.cpp  twotoneicongrid.h
include/QIconKit/: animated_icon.h  font_icon_provider.h  icon_cache.h  icon_factories.h  icon_manager.h  icon_provider.h  qiconkit.h
include/QIconKit/enums/: font_awesome.h  lucide_icons.h  material_icons.h  remix_icons.h
include/QtIcons/: font_icon_provider.h  icon_factories.h  icon_manager.h  icon_provider.h  qticons.h
include/QtIcons/enums/: font_awesome.h  lucide_icons.h  material_icons.h  remix_icons.h
resources/: icons.qrc
src/: animated_icon.cpp  font_icon_provider.cpp  icon_cache.cpp  icon_factories.cpp  icon_manager.cpp  qiconkit.cpp  qticons.cpp
